k8/manifest/deployment.yaml
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dining-backend
  labels:
    app: dining-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dining-backend
  template:
    metadata:
      labels:
        app: dining-backend
    spec:
      containers:
      - name: dining-backend
        image: arnavsingh03/dining-backend:latest
        ports:
        - containerPort: 8080
---

# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dining-frontend
  labels:
    app: dining-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dining-frontend
  template:
    metadata:
      labels:
        app: dining-frontend
    spec:
      containers:
      - name: dining-frontend
        image: arnavsingh03/dining-frontend:latest
        ports:
        - containerPort: 80
