k8/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dining-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dining-app.local
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dining-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dining-frontend
                port:
                  number: 80
